@@ -1,9 +1,7 @@
 package com.me3tweaks.modmanager;
 
-import java.awt.BorderLayout;
+import java.awt.Component;
 import java.awt.Dialog;
-import java.awt.Dimension;
-import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.beans.PropertyChangeEvent;
@@ -20,8 +18,6 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 
-import javax.swing.BorderFactory;
-import javax.swing.Box;
 import javax.swing.BoxLayout;
 import javax.swing.JButton;
 import javax.swing.JDialog;
@@ -31,6 +27,9 @@ import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JProgressBar;
 import javax.swing.SwingWorker;
+import javax.swing.border.EmptyBorder;
+import javax.swing.border.EtchedBorder;
+import javax.swing.border.TitledBorder;
 
 import org.ini4j.InvalidFileFormatException;
 import org.ini4j.Wini;
@@ -38,7 +37,7 @@ import org.json.simple.JSONObject;
 
 @SuppressWarnings("serial")
 public class UpdateAvailableWindow extends JDialog implements ActionListener, PropertyChangeListener {
-	String downloadLink, updateScriptLink,manualLink;
+	String downloadLink, updateScriptLink,manualLink, changelogLink;
 	boolean error = false;
 	String version;
 	long build;
@@ -46,6 +45,8 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 	JButton updateButton, notNowButton, nextUpdateButton, manualDownloadButton;
 	JSONObject updateInfo;
 	JProgressBar downloadProgress;
+	private JButton changelogButton;
+	private JPanel downloadPanel;
 
 	public UpdateAvailableWindow(JSONObject updateInfo, JFrame callingWindow) {
 		this.updateInfo = updateInfo;
@@ -53,6 +54,7 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 		version = (String) updateInfo.get("latest_version_hr");
 		downloadLink = (String) updateInfo.get("download_link");
 		manualLink = (String) updateInfo.get("manual_link");
+		changelogLink = (String) updateInfo.get("changelog_link");
 		if (manualLink == null) {
 			manualLink = downloadLink;
 		}
@@ -70,7 +72,6 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 	}
 
 	private void setupWindow() {
-		JPanel panel = new JPanel(new BorderLayout());
 		JPanel updatePanel = new JPanel();
 		updatePanel.setLayout(new BoxLayout(updatePanel, BoxLayout.Y_AXIS));
 		introLabel = new JLabel();
@@ -95,10 +96,10 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 		} else {
 			introLabel.setText("An update for Mod Manager is available from ME3Tweaks.");
 		}
-
-
+		
 		versionsLabel = new JLabel("<html>Local Version: "+ModManager.VERSION+" (Build "+ModManager.BUILD_NUMBER+")<br>"
 				+ "Latest Version: "+latest_version_hr+" (Build "+latest_build_number+")</html>");
+
 		String release_notes = (String) updateInfo.get("release_notes");
 		changelogLabel = new JLabel("<html><div style=\"width:270px;\">"+release_notes+"</div></html>");
 		updateButton = new JButton("Install Update");
@@ -109,36 +110,63 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 		nextUpdateButton.addActionListener(this);
 		manualDownloadButton = new JButton("Manual Download");
 		manualDownloadButton.addActionListener(this);
+		changelogButton = new JButton("View full changelog");
+		changelogButton.addActionListener(this);
 		
 		downloadProgress = new JProgressBar();
 		downloadProgress.setStringPainted(true);
 		downloadProgress.setIndeterminate(false);
 		downloadProgress.setEnabled(false);
 		
-		sizeLabel = new JLabel(" ");
+		sizeLabel = new JLabel(" "); //space or it won't pack properly
+		sizeLabel.setAlignmentX(Component.LEFT_ALIGNMENT);
+		
+		
+		//Panel setup
+		JPanel versionPanel = new JPanel();
+		versionPanel.setLayout(new BoxLayout(versionPanel, BoxLayout.Y_AXIS));
+		versionPanel.add(versionsLabel);
+		versionPanel.setBorder(new TitledBorder(new EtchedBorder(),"Version Information"));
+		
+		JPanel changeLogPanel = new JPanel();
+		changeLogPanel.setLayout(new BoxLayout(changeLogPanel, BoxLayout.Y_AXIS));
+		changeLogPanel.setBorder(new TitledBorder(new EtchedBorder(),"Changelog"));
 		
 		updatePanel.add(introLabel);
-		updatePanel.add(Box.createRigidArea(new Dimension(0, 10)));
-		updatePanel.add(versionsLabel);
-		updatePanel.add(Box.createRigidArea(new Dimension(0, 10)));
+		updatePanel.add(versionPanel);
 
-		updatePanel.add(changelogLabel);
+		changeLogPanel.add(changelogLabel);
+		if (changelogLink != null && !changelogLink.equals("")){
+			changeLogPanel.add(changelogButton);
+		}
 		
-		JPanel actionPanel = new JPanel(new BorderLayout());
-		actionPanel.add(updateButton, BorderLayout.WEST);
-		actionPanel.add(nextUpdateButton, BorderLayout.EAST);
-		actionPanel.add(downloadProgress, BorderLayout.SOUTH);
-		actionPanel.add(manualDownloadButton, BorderLayout.CENTER);
-		//updatePanel.add(actionPanel);
-		//updatePanel.add(sizeLabel);
+		updatePanel.add(changeLogPanel);
+		updatePanel.setBorder(new EmptyBorder(5,5,5,5));
 
+		JPanel actionPanel = new JPanel();
+		actionPanel.setLayout(new BoxLayout(actionPanel, BoxLayout.X_AXIS));
+		actionPanel.add(updateButton);
+		actionPanel.add(manualDownloadButton);
+		actionPanel.add(nextUpdateButton);
+		actionPanel.setBorder(new TitledBorder(new EtchedBorder(),"Actions"));
+		actionPanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+
+		updatePanel.add(actionPanel);
 		
-		//aboutPanel.add(loggingMode, BorderLayout.SOUTH);
-		panel.setBorder(BorderFactory.createEmptyBorder(5,5,5,5));
-		panel.add(updatePanel, BorderLayout.NORTH);
-		panel.add(actionPanel, BorderLayout.CENTER);
-		panel.add(sizeLabel,BorderLayout.SOUTH);
-		this.getContentPane().add(panel);
+		downloadPanel = new JPanel();
+		downloadPanel.setLayout(new BoxLayout(downloadPanel, BoxLayout.Y_AXIS));
+		downloadPanel.add(downloadProgress);
+		downloadPanel.add(sizeLabel);
+		downloadPanel.setBorder(new TitledBorder(new EtchedBorder(),"Download Progress"));
+		downloadPanel.setVisible(false);
+		updatePanel.add(downloadPanel);
+
+		actionPanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+		downloadPanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+		versionPanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+		changeLogPanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+		updatePanel.setAlignmentX( Component.LEFT_ALIGNMENT );
+		this.getContentPane().add(updatePanel);
 	}
 	
     void setStatusText(String text) {
@@ -286,12 +314,6 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 	                        fileURL.length());
 	            }
 	 
-	            // output for debugging purpose only
-	            System.out.println("Content-Type = " + contentType);
-	            System.out.println("Content-Disposition = " + disposition);
-	            System.out.println("Content-Length = " + contentLength);
-	            System.out.println("fileName = " + fileName);
-	 
 	            // opens input stream from the HTTP connection
 	            inputStream = httpConn.getInputStream();
 	 
@@ -327,11 +349,14 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 			updateButton.setEnabled(false);
 			manualDownloadButton.setEnabled(false);
 			nextUpdateButton.setEnabled(false);
+			downloadPanel.setVisible(true);
+			pack();
 			DownloadTask task = new DownloadTask(ModManager.getTempDir());
 			task.addPropertyChangeListener(this);
 			task.execute();
 		} else 
 		if (e.getSource() == nextUpdateButton) {
+			JOptionPane.showMessageDialog(this, "Outdated builds of Mod Manager are not supported.\nYou can make this update visible again in the options window.", "Unsupported Warning", JOptionPane.WARNING_MESSAGE);
 			//write to ini that we don't want update
 			Wini ini;
 			try {
@@ -355,20 +380,29 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 				ModManager.debugLogger.writeException(e1);
 			}
 			dispose();
+		} else if (e.getSource() == changelogButton) {
+			try {
+				ModManager.openWebpage(new URI(changelogLink));
+			} catch (URISyntaxException e1) {
+				ModManager.debugLogger.writeException(e1);
+			}
 		}
 	}
 	
+	/**
+	 * Shuts down Mod Manager and runs the update script
+	 */
 	public void runUpdateScript() {
-		// TODO Auto-generated method stub
 		String[] command = { "cmd.exe", "/c", "start", "cmd.exe", "/c", ModManager.getTempDir()+"updater.cmd" };
 		try {
-			Runtime.getRuntime().exec(command);
+			ProcessBuilder pb = new ProcessBuilder(command);
+			pb.start();
+			ModManager.debugLogger.writeMessage("Upgrading to build "+build+", shutting down.");
+			System.exit(0);
 		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			ModManager.debugLogger.writeErrorWithException("FAILED TO RUN AUTO UPDATER:",e);
+			JOptionPane.showMessageDialog(UpdateAvailableWindow.this, "Mod Manager had a critical exception attempting to run the updater.\nPlease report this to FemShep.", "Updating Error", JOptionPane.ERROR_MESSAGE);
 		}
-		ModManager.debugLogger.writeMessage("Upgrading to build "+build+", shutting down.");
-		System.exit(0);
 	}
 
 	/**
@@ -382,6 +416,8 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 		sb.append("\r\n");
 		sb.append("@echo off");
 		sb.append("\r\n");
+		sb.append("setlocal");
+		sb.append("\r\n");
 		sb.append("echo Current directory: %CD%");
 		sb.append("\r\n");
 		sb.append("pushd data\\temp");
@@ -394,29 +430,59 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 		sb.append("\r\n");
 		sb.append("\r\n");
 		sb.append("::Extract update");
-		sb.append("\r\n");
+		sb.append("\r\n\"");
 		sb.append(ModManager.getToolsDir());
-		sb.append("7za.exe -y x "+ModManager.getTempDir()+"ME3CMM.7z -o"+ModManager.getTempDir()+"NewVersion");
+		sb.append("7za.exe\" -y x \""+ModManager.getTempDir()+"ME3CMM.7z\" -o\""+ModManager.getTempDir()+"NewVersion\"");
 		sb.append("\r\n");
+		sb.append("\r\n");
+		sb.append("set MODMAN=%errorlevel%");
+		sb.append("\r\n");
+		sb.append("if %MODMAN% EQU 0 (");
+		sb.append("\r\n");
+		sb.append("    color 0A");
+		sb.append("\r\n");
+		sb.append("    echo Mod Manager extracted successfully.");
+		sb.append("\r\n");
+		sb.append(")");
+		sb.append("\r\n");
+
+		sb.append("if %MODMAN% EQU 1 (");
+		sb.append("\r\n");
+		sb.append("    color 06");
+		sb.append("\r\n");
+		sb.append("    echo Mod Manager extracted with warnings.");
+		sb.append("\r\n");
+		sb.append(")");
+		sb.append("\r\n");
+
+		sb.append("if %MODMAN% GEQ 2 (");
+		sb.append("\r\n");
+		sb.append("    color 0C");
+		sb.append("\r\n");
+		sb.append("    echo Mod Manager did not extract succesfully. Please report this to FemShep.");
+		sb.append("\r\n");
+		sb.append("    pause");
+		sb.append("\r\n");
+		sb.append(")");
 		sb.append("\r\n");
 		sb.append("::Check for build-in update script");
 		sb.append("\r\n");
-		sb.append("if exist "+ModManager.getTempDir()+"NewVersion\\update.cmd (");
+		sb.append("if exist \""+ModManager.getTempDir()+"NewVersion\\update.cmd\" (");
 		sb.append("\r\n");
-		sb.append("CALL "+ModManager.getTempDir()+"NewVersion\\update.cmd");
+		sb.append("CALL \""+ModManager.getTempDir()+"NewVersion\\update.cmd\"");
 		sb.append("\r\n");
 		sb.append(")");
 		sb.append("\r\n");
 		sb.append("::Update the files");
 		sb.append("\r\n");
-		sb.append("xcopy /Y /S "+ModManager.getTempDir()+"NewVersion "+System.getProperty("user.dir"));
+		sb.append("xcopy /Y /S \""+ModManager.getTempDir()+"NewVersion\" \""+System.getProperty("user.dir")+"\"");
 		sb.append("\r\n");
 		
 		sb.append("::Cleanup");
 		sb.append("\r\n");
-		sb.append("del /Q "+ModManager.getTempDir()+"ME3CMM.7z");
+		sb.append("del /Q \""+ModManager.getTempDir()+"ME3CMM.7z\"");
 		sb.append("\r\n");
-		sb.append("rmdir /S /Q "+ModManager.getTempDir()+"NewVersion");
+		sb.append("rmdir /S /Q \""+ModManager.getTempDir()+"NewVersion\"");
 		sb.append("\r\n");
 		sb.append("::Run Mod Manager");
 		sb.append("\r\n");
@@ -430,6 +496,8 @@ public class UpdateAvailableWindow extends JDialog implements ActionListener, Pr
 			sb.append("ME3CMM.exe --update-from ");
 		}
 		sb.append(ModManager.BUILD_NUMBER);
+		sb.append("\r\n");
+		sb.append("endlocal");
 		sb.append("\r\n");
 		sb.append("call :deleteSelf&exit /b");
 		sb.append("\r\n");
